Fixed flex alignment issue for navbar in iOS.

--- a/src/themes/ios/navbars.less
+++ b/src/themes/ios/navbars.less
@@ -10,6 +10,7 @@ nav {
   height: 45px;
   .box-sizing(border-box);
   #flex > .display(flex);
+  display: -webkit-flex;
   #flex > .flex-direction(column);
   #flex > .justify-content(center);
   #flex > .align-items(flex-start);
